services/downloads-standard/sonarr-portuguese/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-portuguese
  namespace: downloads-standard
spec:
  type: ClusterIP
  selector:
    app: sonarr-portuguese
  ports:
  - port: 8989
    targetPort: 8989
    protocol: TCP
    name: http
